--- a/css/style.css
+++ b/css/style.css
@@ -406,22 +406,42 @@ small {
   margin-right: auto;
 }
 
-.separador {
-  height: 101vh;
-  min-width: 100%;
-  margin: 0;
-  padding: 0;
-  background-size: cover;
-  opacity: 0.9;
-  margin: 3em 0 0 0;
-}
-
 .fondo_menta {
   background-image: url("../assets/images/5_Arboles_texturas.svg");
 }
 
 .fondo_mandarina {
   background-image: url("../assets/images/6_Arboles_texturas.svg");
+}
+
+.rosa_tierra {
+  background: url("../assets/images/separador_rosa_arbolinea.png") no-repeat center;
+}
+
+.verde_empresa {
+  background: url("../assets/images/separador_menta_cintillo.png") no-repeat center;
+}
+
+.rosa_empresa {
+  background: url("../assets/images/separador_rosa_cintillo.png") no-repeat center;
+}
+
+.verde_tierra {
+  background: url("../assets/images/separador_menta_arbol.png") no-repeat center;
+}
+
+.separador, .separador_peq {
+  height: 101vh;
+  min-width: 100%;
+  margin: 0;
+  padding: 0;
+  background-size: 100%;
+  opacity: 0.9;
+  margin: 3em 0 0 0;
+}
+
+.separador_peq {
+  height: 100px;
 }
 
 .apertura {
