--- a/scss/components/menu.scss
+++ b/scss/components/menu.scss
@@ -1,3 +1,5 @@
+@use '../components/variables' as v;
+
 /* -------------*/
 /* inicializar propiedades*/
 
@@ -11,7 +13,7 @@ body
 {
     padding-top: 70px;
     font-family: 'texto', sans-serif;
-    background-color: $fondo;
+    background-color: v.$fondo;
 }
 
 
@@ -42,7 +44,7 @@ ul {
     top:0;
     left:0;
     width: 100%;
-    box-shadow: 0 8px 60px black;
+    box-shadow: 0 8px 60px v.$fondo;
     z-index:2;
 
 }
@@ -65,12 +67,12 @@ ul {
 
   &:hover .mLine
   {
-      stroke: $verde_mutante;
+      stroke: v.$verde_mutante;
   }
 
   &:hover
   {
-    border-color: $verde_mutante;
+    border-color: v.$verde_mutante;
   }
 }
 
@@ -92,12 +94,12 @@ ul {
 
       a
       {
-        color: black;
+        color: v.$fondo;
         border-bottom: 4px #fff solid;
 
           &:hover {
-            color: $verde_mutante; 
-            border-bottom: 4px $verde_mutante solid;
+            color: v.$verde_mutante; 
+            border-bottom: 4px v.$verde_mutante solid;
         }
       } 
   }
