--- a/scss/components/paneles.scss
+++ b/scss/components/paneles.scss
@@ -1,3 +1,6 @@
+@use '../components/variables' as v;
+@use 'sass:color';
+
 // parámetros globales
 html, body {
   margin: 0;
@@ -7,7 +10,7 @@ html, body {
 
 .titulos 
 {
-    color: $verde;
+    color: v.$verde;
     text-transform: uppercase;
     font-family: 'titulos', sans-serif;
 }
@@ -90,31 +93,31 @@ small
 
 .menta 
 {
-    color: $verde;
+    color: v.$verde;
 
     * {
-    color: $verde;}
+    color: v.$verde;}
 
     .enlace {
-    color: $verde;
-    border-bottom: $rosa dotted 2px;
+    color: v.$verde;
+    border-bottom: v.$rosa dotted 2px;
 
-    &:hover {color: $rosa; }
+    &:hover {color: v.$rosa; }
     }
 }
 
 .rosa 
 {
-    color: $rosa;
+    color: v.$rosa;
     
     * {
-    color: $rosa;}
+    color: v.$rosa;}
 
     .enlace {
-    color: $rosa;
-    border-bottom: $verde dotted 2px;
+    color: v.$rosa;
+    border-bottom: v.$verde dotted 2px;
 
-    &:hover {color: $verde; }
+    &:hover {color: v.$verde; }
     }
 }
 
@@ -136,21 +139,29 @@ small
     align-items: center;
     justify-content: flex-end;
     position: relative;
-    font-size: 0.1em;
-    color: $rosa;
+    font-size: 1em;
+    color: v.$rosa;
     margin: 0;
-    padding: 0.25rem;
+    padding: 0;//0.25rem;
     transition: all 0.3s ease;
-    text-shadow: 1px 2px 4px #000;
+    gap: 0;
 
-    i.material-icons {
+    div.icons {
       margin: 0;
+      padding: 0;
       transition: margin 0.3s ease;
+      width: 2em;
+      height: 2em;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
     }
 
     &:hover {
-      font-size: 0.8em;
-      transform: scale(1.2);
+      width: 2.3em;
+      height: 2.3em;
+      //font-size: 0.8em;
+      //transform: scale(1.2);
       
       &::after {
         opacity: 1;
@@ -166,18 +177,39 @@ small
     }
 
      &.active {
-      font-size: 0.8em;
-      transform: scale(1.2);
-      color: lighten($rosa, 10%);
+      //font-size: 0.8em;
+      //transform: scale(1.2);
+      color: color.adjust(v.$rosa, $lightness: 50%); //lighten(v.$rosa, 10%);
       text-shadow: 2px 3px 6px #000;
       transition: all 0.3s ease;
       background-color: transparent;
 
-      i.material-icons {
+      div.icons {
         margin-right: 0;
-        transform: scale(1.3);
+        width: 2.5em;
+        height: 2.5em;
+        //transform: scale(1.3);
         transition: all 0.3s ease;
       }
+    }
+
+    &:nth-child(1) .icons {
+      background: url("../assets/images/ico_intro.svg") no-repeat center;
+    }
+    &:nth-child(2) .icons {
+      background-image: url("../assets/images/ico_tierras.svg");
+    }
+    &:nth-child(3) .icons{
+      background-image: url("../assets/images/ico_energia.svg");
+    }
+    &:nth-child(4) .icons {
+      background-image: url("../assets/images/ico_etica.svg");
+    }
+    &:nth-child(5) .icons{
+      background-image: url("../assets/images/ico_social.svg");
+    }
+    &:nth-child(6) .icons{
+      background-image: url("../assets/images/ico_equipo.svg");
     }
 
     // Diferentes textos mostrados al hacer hover
@@ -253,8 +285,10 @@ small
 .apertura 
 {
   position: relative;
-  width: 100%;
-  padding-bottom: 56.25%; // 16:9 aspect ratio (9 / 16 = 0.5625)
+  left: 10%;
+  top: 60px;
+  width: 80%;
+  padding-bottom: 37.25%; // 16:9 aspect ratio (9 / 16 = 0.5625)
   overflow: hidden;
 
     &__video
@@ -265,12 +299,15 @@ small
       width: 100%;
       height: 100%;
       object-fit: cover; // llena el contenedor recortando si es necesario
-      //border: $verde solid 2px;
+      //border: v.$verde solid 2px;
     }
 
     @media (max-width: 1200px)
     {
       top: 70px;
+      left: 0;
+      width: 100%;
+      padding-bottom: 56.25%;
     }
 
 } 
@@ -386,7 +423,7 @@ small
             left: 0; 
             padding: 5px; 
             color: #000; 
-            //background-color: $rosa; 
+            //background-color: v.$rosa; 
             font-family: 'menu', sans-serif;
             display: inline-block;
             font-size: small;
@@ -484,7 +521,7 @@ small
             left: 3px; 
             padding: 5px; 
             color: #000; 
-            background-color: $rosa; 
+            background-color: v.$rosa; 
             font-family: 'menu', sans-serif;
             display: inline-block;
             font-size: small;
@@ -498,7 +535,7 @@ small
             width: 80%;
             font-family: 'titulos', sans-serif;
             text-align: left;
-            color: $rosa;
+            color: v.$rosa;
             text-transform: uppercase;
     }
 
@@ -537,12 +574,12 @@ small
 
     &:hover
     {
-        border:solid 1px $rosa;
+        border:solid 1px v.$rosa;
     }
 
     &::after
     {
-    border:solid 1px $rosa;
+    border:solid 1px v.$rosa;
     }  
 }
 
@@ -550,7 +587,7 @@ small
   @extend .cards; //igual que .Tierras
   grid-template-columns: 1fr 0.5fr 1fr;      // excepto que este tiene tres columnas, la de la mitad más pequeña
   grid-template-rows: auto;      // una fila
-  @include colorear_cards($verde);
+  @include colorear_cards(v.$verde);
 
   // Col 1: Colombia
   &__col1, &__col3 {
@@ -577,7 +614,7 @@ small
   }
 
   .wavy-line {
-    stroke: $verde;
+    stroke: v.$verde;
     fill: none;
     stroke-width: 3;
     stroke-linecap: round;
@@ -603,14 +640,14 @@ small
     .dot {
       width: 0.8em;
       height: 0.8em;
-      background-color: $verde;
+      background-color: v.$verde;
       border-radius: 50%;
-      box-shadow: 0 0 4px $verde;
+      box-shadow: 0 0 4px v.$verde;
     }
 
     .label {
       font-size: 0.8em;
-      color: $verde;
+      color: v.$verde;
       white-space: nowrap;
       font-style: italic;
     }
@@ -661,7 +698,7 @@ small
 .tierras
 {
   @extend .cards;
-  @include colorear_cards($rosa);
+  @include colorear_cards(v.$rosa);
   gap: 1rem;
 }
 
@@ -722,7 +759,7 @@ small
             left: 0; 
             padding: 5px; 
             color: #000; 
-            //background-color: $rosa; 
+            //background-color: v.$rosa; 
             font-family: 'menu', sans-serif;
             display: inline-block;
             font-size: small;
@@ -798,12 +835,12 @@ small
 
 #etica
 {
-  @include colorear_cards($rosa);
+  @include colorear_cards(v.$rosa);
 }
 
 #social
 {
-  @include colorear_cards($verde);
+  @include colorear_cards(v.$verde);
 }
 
   .ruta
@@ -829,13 +866,13 @@ small
       &-header
       {
         position: relative;
-        background-color: $verde;
+        background-color: v.$verde;
         
         &-img {
           @extend .card__header-img;
           width: 100%;
           height: 99%; 
-          background-color: $verde; 
+          background-color: v.$verde; 
           background-size: contain;         
           background-position: center center;
           background-repeat: no-repeat;   
@@ -851,7 +888,7 @@ small
           font-family: 'menu', sans-serif;
           font-size: 0.9em;
           color: #000;
-          background-color: $verde;
+          background-color: v.$verde;
           padding: 0.5em;
         }
 
@@ -859,7 +896,7 @@ small
           font-family: 'titulos', sans-serif;
           font-size: 1em;
           text-transform: uppercase;
-          color: $verde;
+          color: v.$verde;
           margin-top: 1em;
           margin-bottom: 0;
         }
@@ -868,7 +905,7 @@ small
         {
           font-family: 'texto', sans-serif;
           letter-spacing: 1px;
-          color: $verde;
+          color: v.$verde;
           margin-top: 0;
           margin-bottom: 0.5em;
         }
@@ -876,7 +913,7 @@ small
 
       &:hover
       {
-        border: solid 1px $verde;
+        border: solid 1px v.$verde;
       }
     }
     
@@ -899,6 +936,67 @@ small
 {background-image: url("https://mutante.org/wp-content/uploads/2025/05/Poster-jpg.webp");}
 .pieza3
 {background-image: url("https://mutante.org/wp-content/uploads/2025/05/01-100_11zon.jpg");}
+
+.creditos
+{
+  width: 50%;
+  margin-top: 3em;
+  margin-left: auto;
+  margin-right: auto;
+  
+  hr 
+  {
+    border: solid 1px v.$rosa;
+    width: 50%;
+    margin-top: 2em;
+  }
+
+  p {
+    font-family: 'texto', sans-serif;
+    font-size: 0.8em;
+    span {
+    font-family: 'titulos', sans-serif;
+    font-size: 1em;  
+    }
+  }
+
+  @media (max-width: 843px)
+    {
+      width: 100%;
+    }
+}
+// Logos
+.logos {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    transition: all 0.3s ease;
+    gap: 10px;
+
+    &__logo {
+      margin: 0;
+      padding: 0;
+      display: block;
+      width: 100px;
+      height: 100px;
+      //border: v.$rosa 1px solid;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+     
+    &:nth-child(1) {
+      background-image: url("../assets/images/logo_mutante.webp");
+    }
+    &:nth-child(2) {
+      background-image: url("../assets/images/laligacontraesilencio.jpg");
+    }
+    &:nth-child(3) {
+      background-image: url("../assets/images/logorunrunes.webp");
+    }
+    }
+  }
 
 //responsive
 @media (max-width: 1000px)
