--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-@import './components/variables'; //Siempre arriba de todo
+@use './components/variables'; //Siempre arriba de todo
 
-@import './components/menu';
-@import './components/paneles';
+@use './components/menu';
+@use './components/paneles';
