--- a/scss/components/paneles.scss
+++ b/scss/components/paneles.scss
@@ -8,6 +8,17 @@ html, body {
   overflow-x: hidden; // 🔐 Esto evitará que cualquier contenido se desborde horizontalmente
 }
 
+b
+{
+  font-family: 'titulos', sans-serif;
+  letter-spacing: 1.5px;
+}
+
+hr
+{
+margin: 3em 3em 3em 0;
+}
+
 .titulos 
 {
     color: v.$verde;
@@ -20,6 +31,10 @@ h1 {
     width: 42%;
     font-size: 3em;
 
+    @media (min-width: 1501px)
+    {
+      width: 40%;
+    }
     @media (max-width: 1227px)
     {
       width: 50%;
@@ -78,17 +93,13 @@ small
     font-family: 'menu', sans-serif;
 }
 
-.texto 
-{
-    width: 90%;
-    margin-left: 10px;
-}
-
 .intro 
 {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+    max-width: 1200px;
+    text-align: left;
 }
 
 .menta 
@@ -100,9 +111,9 @@ small
 
     .enlace {
     color: v.$verde;
-    border-bottom: v.$rosa dotted 2px;
+    border-bottom: v.$verde dotted 2px;
 
-    &:hover {color: v.$rosa; }
+    &:hover {color: v.$rosa; border-color:v.$rosa; }
     }
 }
 
@@ -115,9 +126,9 @@ small
 
     .enlace {
     color: v.$rosa;
-    border-bottom: v.$verde dotted 2px;
+    border-bottom: v.$rosa dotted 2px;
 
-    &:hover {color: v.$verde; }
+    &:hover {color: v.$verde; border-color:v.$verde; }
     }
 }
 
@@ -140,9 +151,9 @@ small
     justify-content: flex-end;
     position: relative;
     font-size: 1em;
-    color: v.$rosa;
+    color: v.$verde;
     margin: 0;
-    padding: 0;//0.25rem;
+    padding: 0;
     transition: all 0.3s ease;
     gap: 0;
 
@@ -160,8 +171,6 @@ small
     &:hover {
       width: 2.3em;
       height: 2.3em;
-      //font-size: 0.8em;
-      //transform: scale(1.2);
       
       &::after {
         opacity: 1;
@@ -177,9 +186,7 @@ small
     }
 
      &.active {
-      //font-size: 0.8em;
-      //transform: scale(1.2);
-      color: color.adjust(v.$rosa, $lightness: 50%); //lighten(v.$rosa, 10%);
+      color: color.adjust(v.$rosa, $lightness: 50%); 
       text-shadow: 2px 3px 6px #000;
       transition: all 0.3s ease;
       background-color: transparent;
@@ -188,13 +195,12 @@ small
         margin-right: 0;
         width: 2.5em;
         height: 2.5em;
-        //transform: scale(1.3);
         transition: all 0.3s ease;
       }
     }
 
     &:nth-child(1) .icons {
-      background: url("../assets/images/ico_intro.svg") no-repeat center;
+      background-image: url("../assets/images/ico_intro.svg");
     }
     &:nth-child(2) .icons {
       background-image: url("../assets/images/ico_tierras.svg");
@@ -320,6 +326,9 @@ small
   align-items: left;
   justify-content: flex-start;
   margin-bottom: 2em;
+  max-width: 1505px;
+  margin-left: auto;
+  margin-right: auto;
   // Fila 1: ocupa ambas columnas
   .fila1 {
     grid-column: 1 / 3;               // De columna 1 a 3 (ocupa dos columnas)
@@ -379,9 +388,8 @@ small
     display: grid;
     grid-template-columns: 1fr 1fr;      // Dos columnas iguales
     grid-template-rows: auto auto;      // Dos filas
-    justify-content: center;// flex-start;
-    align-items: center;
-    width: 80%;
+    justify-content: flex-start;
+    width: 100%;
     max-width: 1200px;
     padding: 0;
     margin: 4em auto;
@@ -392,38 +400,41 @@ small
 {
     width: 100%;
     min-height: 22em;
-    padding: 3px;
+    padding: 0;
     background-color: #000;
-    transition: all .8s;
-    max-width: 25em;
+    transition: all .8s; 
+    align-self: flex-start;
 
-    //card__header
     &__header 
     {
         position: relative;
-        height: 15em;
-        text-transform: uppercase;
-        //card__header-img
+        width: 100%;
+        padding-top: 66.66% ; //Esta es 3:2, la 16:9 es 56.25%
+        overflow: hidden;
+
         &-img 
         {
-            position: absolute;
-            top: 0px;
+           position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
-            display:block;
-            height: 15em;
+            height: 100%; // ¡Esto es clave!
+            object-fit: cover;
             opacity: .7;
-            overflow: hidden;
+            display: block;    
+            padding: 3px;
+            border: 1px solid transparent;
+            box-sizing: border-box;
+            transition: border-color 0.3s ease;
         }
 
-        //card__header-tag
         &-tag 
         { 
             position: absolute; 
-            top: 0;
-            left: 0; 
+            top: 4px;
+            left: 4px; 
             padding: 5px; 
             color: #000; 
-            //background-color: v.$rosa; 
             font-family: 'menu', sans-serif;
             display: inline-block;
             font-size: small;
@@ -431,38 +442,51 @@ small
             text-transform: uppercase;
         }
 
-        //card__header-title
         &-title 
         {
             position: absolute; 
-            top: 60%; 
-            left: 5px;
-            font-family: 'titulos', sans-serif;
-            font-size: 1.2em;
-            text-align: left;
-           // color: #fff;
+            top: 50%; 
+            left: 10px;
+            right: 10px;
+            line-height: 1;
+
+            h3 
+            {
+              font-family: 'titulos', sans-serif;
+              font-size: 1.3em;
+              text-align: left;
+              text-transform: uppercase;
+            }
+            small 
+            {
+              font-family: 'texto', sans-serif;
+              text-transform: uppercase;
+              margin: 0;
+            }
+           p 
+           {           
+              margin-top: 10px;
+              padding-bottom: 0;
+              font-size: 0.8em;
+          }
         }
     }
-
-    &__descrip 
-    {
-        margin: 20px;
-        line-height: 1;
-        font-size: 0.8em;
-
-        p
-        {
-            line-height: 1;
-            
-            margin-top: 10px;
-        }
-
-        &-autor 
-        {
-            font-family: 'texto', sans-serif;
-            text-transform: uppercase;
-        }
-    } 
+@media (max-width: 536px)
+{
+  .card__header-title
+  {
+    top:40%;
+    h3 {font-size: 1.2em;}
+  }
+}
+@media (max-width: 489px)
+{
+  .card__header-title
+  {
+    top:40%
+  }
+}
+    
 }
 
 @mixin colorear_cards($color)
@@ -474,7 +498,12 @@ small
   .card_total__descrip-autor, 
   .card_total__descrip p { color: $color; }
 
-  .card:hover, .card_total:hover 
+  .card:hover .card__header-img
+  {
+    border-color: $color;
+  }
+
+  .card_total:hover, .card2:hover
     {
         border: solid 1px $color;
     }
@@ -584,20 +613,72 @@ small
 }
 
 .energia {
-  @extend .cards; //igual que .Tierras
-  grid-template-columns: 1fr 0.5fr 1fr;      // excepto que este tiene tres columnas, la de la mitad más pequeña
-  grid-template-rows: auto;      // una fila
+  @extend .cards;
+  grid-template-columns: 1fr 0.5fr 1fr; 
+  grid-template-rows: auto; 
   @include colorear_cards(v.$verde);
 
-  // Col 1: Colombia
-  &__col1, &__col3 {
-    @extend .card;
+  //Col 1 y 3, tarjetas de reportajes
+  .card2 {
+    width: 100%;
+    min-height: 22em;
+    padding: 0;
+    background-color: #000;
+    transition: all .8s; 
+    align-self: flex-start;
+
+    &__header 
+    {
+        position: relative;
+        width: 100%;
+        padding-top: 66.66%; // Proporción 3:2
+        overflow: hidden;
+
+        &-img 
+        {
+           @extend .card__header-img;
+        }
+
+        &-tag 
+        { 
+           @extend .card__header-tag;
+        }
+
+        &-title
+        {
+          position: absolute;
+          top: 60%;
+          left: 5%;
+          font-family: 'Titulos', sans-serif;
+          text-transform: uppercase;
+          font-size: 1.3em;
+        }
+    }
+
+    &__descrip 
+    {
+      margin: 20px;
+      line-height: 1;
+      font-size: 0.8em;
+      
+      &-autor 
+        {
+          font-family: 'texto', sans-serif;
+          text-transform: uppercase;
+        }
+
+      p
+        {
+          line-height: 1;  
+          margin-top: 10px;
+        }
+    } 
   }
 
   // Col 2: Río Orinoco
   &__col2 {
     display: grid;
-    grid-template-rows: 1fr 1fr;      // Divide columna A en dos partes verticales
+    grid-template-rows: 1fr 1fr;
     gap: 1rem;
     display: block;
     justify-content: flex-start;
@@ -620,7 +701,6 @@ small
     stroke-linecap: round;
 
     // patrón punteado irregular
-    //stroke-dasharray: 6 4 2 8 3 5;
     stroke-dasharray: 15 8 20 8 30 8;
     stroke-dashoffset: 0;
 
@@ -705,8 +785,7 @@ small
 .card_horizontal
 {
   width: 80%;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 0;
 
   @media (max-width: 1159px)
     {
@@ -722,15 +801,14 @@ small
 {
     margin-top: 5em;
     width: 100%;
-    //min-height: 19em;
-    height: 19em;
+    height: 20em;
     padding: 3px;
     background-color: #000;
     display: grid;
     grid-template-columns: 1fr 1fr;      // Dos columnas iguales
     grid-template-rows: auto;      // Dos filas
     width: 100%;
-    //max-width: 25em;
+    
 
     //card__header
     &__header 
@@ -741,29 +819,13 @@ small
         //card__header-img
         &-img 
         {
-            position: absolute;
-            top: 0px;
-            width: 100%;
-            display:block;
-            height: 99%;
-            opacity: .7;
-            overflow: hidden;
-            padding-bottom: 0;
+            @extend .card__header-img;
         }
 
         //card__header-tag
         &-tag 
         { 
-            position: absolute; 
-            top: 0;
-            left: 0; 
-            padding: 5px; 
-            color: #000; 
-            //background-color: v.$rosa; 
-            font-family: 'menu', sans-serif;
-            display: inline-block;
-            font-size: small;
-            border-bottom-left-radius: 0;
+            @extend .card__header-tag;
         }
     }
 
@@ -847,8 +909,8 @@ small
   {
     width: 50%;
     margin-top: 5em;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 0;
+    //margin-right: auto;
 
     &__pieza 
     {
@@ -930,6 +992,47 @@ small
     }
   }
 
+.creditos
+{
+  display: flex;
+  width: 100%;
+  margin-left:0;
+
+  div { 
+    width: 50%; 
+    margin: 0;
+
+    .cargo {
+      font-family: 'titulos', sans-serif;
+      text-transform: uppercase;
+      font-weight: 500;
+      margin-top: 2em;
+      font-size: 1em;
+    }
+
+    .nombre {
+      font-family: 'texto', sans-serif;
+      margin-left: 3em;
+      padding-bottom: 0;
+      margin-bottom: 0.5;
+      line-height: 100%;
+      font-size: 0.9em;
+    }
+    .subt
+    {
+      text-transform: uppercase;
+      font-size: 0.8em;
+      font-style: italic;
+      margin-top: 2em;
+    }
+  }
+    @media (max-width: 740px)
+    {
+      display: block;
+      div {width: 100%;}
+    }
+}
+
 .pieza1
 {background-image: url("https://mutante.org/wp-content/uploads/2025/05/01-100-jpg.webp");}
 .pieza2
@@ -937,40 +1040,14 @@ small
 .pieza3
 {background-image: url("https://mutante.org/wp-content/uploads/2025/05/01-100_11zon.jpg");}
 
-.creditos
-{
-  width: 50%;
-  margin-top: 3em;
-  margin-left: auto;
-  margin-right: auto;
-  
-  hr 
-  {
-    border: solid 1px v.$rosa;
-    width: 50%;
-    margin-top: 2em;
-  }
-
-  p {
-    font-family: 'texto', sans-serif;
-    font-size: 0.8em;
-    span {
-    font-family: 'titulos', sans-serif;
-    font-size: 1em;  
-    }
-  }
-
-  @media (max-width: 843px)
-    {
-      width: 100%;
-    }
-}
 // Logos
 .logos {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 0;
+    margin-top: 10em;
+    margin-bottom: 5em;
     padding: 0;
     transition: all 0.3s ease;
     gap: 10px;
@@ -981,21 +1058,35 @@ small
       display: block;
       width: 100px;
       height: 100px;
-      //border: v.$rosa 1px solid;
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
      
     &:nth-child(1) {
-      background-image: url("../assets/images/logo_mutante.webp");
+      background-image: url("../assets/images/logo_mutante.png");
     }
     &:nth-child(2) {
-      background-image: url("../assets/images/laligacontraesilencio.jpg");
+      background-image: url("../assets/images/laligacontraesilencio.png");
     }
     &:nth-child(3) {
-      background-image: url("../assets/images/logorunrunes.webp");
+      background-image: url("../assets/images/logorunrunes.png");
     }
     }
+  }
+
+  .especial_cierre {
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 10em;
+      margin-bottom: 5em;
+      padding: 0;
+      display: block;
+      width: 100px;
+      height: 100px;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-image: url("../assets/images/4_Mano_circulo.svg");
   }
 
 //responsive
