--- a/css/style.css
+++ b/css/style.css
@@ -467,17 +467,18 @@ small {
 }
 
 .separador, .separador_peq {
-  height: 101vh;
-  min-width: 100%;
-  margin: 0;
+  display: block;
+  height: 500px;
+  width: 100%;
   padding: 0;
-  background-size: 100%;
   opacity: 0.9;
-  margin: 3em 0 0 0;
+  margin: 5em 0 2em 0;
+  background-size: contain;
 }
 
 .separador_peq {
-  height: 100px;
+  height: 80px;
+  margin: 10em 0 5em 0;
 }
 
 .apertura {
@@ -628,6 +629,7 @@ small {
   font-size: 1.3em;
   text-align: left;
   text-transform: uppercase;
+  margin-bottom: 3px;
 }
 .card__header-title small {
   font-family: "texto", sans-serif;
@@ -635,9 +637,9 @@ small {
   margin: 0;
 }
 .card__header-title p {
-  margin-top: 10px;
+  margin: 5px;
   padding-bottom: 0;
-  font-size: 0.8em;
+  font-size: 0.7em;
 }
 @media (max-width: 536px) {
   .card .card__header-title {
@@ -701,25 +703,34 @@ small {
   left: 15%;
   width: 80%;
   font-family: "titulos", sans-serif;
+  font-size: 3em;
   text-align: left;
   color: #FFB68E;
   text-transform: uppercase;
 }
-@media (max-width: 650px) {
+@media (max-width: 966px) {
   .youtube-wrapper .youtube-thumbnail .title {
-    font-size: 1.2em;
+    font-size: 2em;
     left: 13%;
   }
   .youtube-wrapper .youtube-thumbnail .play-button {
-    top: 40%;
-    left: 0;
+    top: 50%;
+    left: 35px;
+  }
+}
+@media (max-width: 650px) {
+  .youtube-wrapper .youtube-thumbnail .title {
+    font-size: 1.5em;
+  }
+  .youtube-wrapper .youtube-thumbnail .play-button {
     transform: scale(0.7);
   }
 }
 @media (max-width: 650px) {
   .youtube-wrapper .youtube-thumbnail .title {
-    font-size: 1em;
-    top: 48%;
+    left: 20px;
+    top: 30%;
+    width: 90%;
   }
   .youtube-wrapper .youtube-thumbnail .play-button {
     top: -6.5px;
@@ -773,11 +784,13 @@ small {
 }
 .energia .card2__header-title {
   position: absolute;
-  top: 60%;
-  left: 5%;
+  top: 50%;
+  left: 10px;
   font-family: "Titulos", sans-serif;
   text-transform: uppercase;
-  font-size: 1.3em;
+  font-size: 1.45em;
+  line-height: 1;
+  width: 90%;
 }
 .energia .card2__descrip {
   margin: 20px;
@@ -907,7 +920,6 @@ small {
 
 .card_total {
   margin-top: 5em;
-  width: 100%;
   height: 20em;
   padding: 3px;
   background-color: #000;
