--- a/scss/components/paneles.scss
+++ b/scss/components/paneles.scss
@@ -112,7 +112,7 @@ small
     .enlace {
     color: v.$verde;
     border-bottom: v.$verde dotted 2px;
-
+ 
     &:hover {color: v.$rosa; border-color:v.$rosa; }
     }
 }
@@ -256,6 +256,7 @@ small
     padding-top: 100px;
     margin-left: auto;
     margin-right: auto;
+
 }
 
 .fondo_menta
@@ -273,19 +274,20 @@ small
 
 .separador
 {
-    height: 101vh;
-    min-width: 100%;
-    margin: 0;
+  display: block;  
+  height: 500px;
+  width: 100%;
     padding: 0;
-    background-size: 100%;//cover;
     opacity: .9;
-    margin: 3em 0 0 0;
+    margin: 5em 0 2em 0;
+    background-size: contain;
 }
 
 .separador_peq
 {
   @extend .separador;
-  height: 100px;
+  height: 80px;
+  margin: 10em 0 5em 0;
 }
 
 .apertura 
@@ -456,6 +458,7 @@ small
               font-size: 1.3em;
               text-align: left;
               text-transform: uppercase;
+              margin-bottom:3px;
             }
             small 
             {
@@ -465,9 +468,9 @@ small
             }
            p 
            {           
-              margin-top: 10px;
+              margin: 5px;
               padding-bottom: 0;
-              font-size: 0.8em;
+              font-size: 0.7em;
           }
         }
     }
@@ -563,21 +566,34 @@ small
             left: 15%;
             width: 80%;
             font-family: 'titulos', sans-serif;
+            font-size: 3em;
             text-align: left;
             color: v.$rosa;
             text-transform: uppercase;
+    }
+    
+    @media (max-width: 966px)
+    {
+      .title 
+      { 
+        font-size: 2em;
+        left: 13%;
+      }
+
+      .play-button {
+        top: 50%;
+        left: 35px;
+      }
     }
 
     @media (max-width: 650px)
     {
       .title 
       { 
-        font-size: 1.2em;
-        left: 13%;
+        font-size: 1.5em;
+        //left: 13%;
       }
-      .play-button {
-        top: 40%;
-        left: 0;
+       .play-button {
         //transform: translate(-10%, -50%);
         transform: scale(0.7);
       }
@@ -587,8 +603,9 @@ small
     {
       .title 
       { 
-        font-size: 1em;
-        top: 48%;
+        left: 20px;
+        top: 30%;
+        width: 90%;
       }
       .play-button {
         top: -6.5px;
@@ -647,11 +664,13 @@ small
         &-title
         {
           position: absolute;
-          top: 60%;
-          left: 5%;
+          top: 50%;
+          left: 10px;
           font-family: 'Titulos', sans-serif;
           text-transform: uppercase;
-          font-size: 1.3em;
+          font-size: 1.45em;
+          line-height: 1;
+          width: 90%;
         }
     }
 
@@ -800,7 +819,6 @@ small
 .card_total
 {
     margin-top: 5em;
-    width: 100%;
     height: 20em;
     padding: 3px;
     background-color: #000;
@@ -808,6 +826,7 @@ small
     grid-template-columns: 1fr 1fr;      // Dos columnas iguales
     grid-template-rows: auto;      // Dos filas
     width: 100%;
+    
     
 
     //card__header
